# indoornav

./: .cursorignore  CMakeLists.txt  CNAME  Dockerfile  LICENSE  QUICKSTART.md  README.md  build_deps.sh  build_phone_demo.sh  calibrate_camera.py  cursor_using_orbslam3_with_phone_camera.md  index.html  mvpplan  navigation_final.py  phone_camera.yaml  phone_mono.cc  run_demo.sh  settings.gradle.kts  setup_wsl.sh  style.css  test_stream.sh
Lidar/: cleaned_point_cloud.pcd  map.py  requirements.txt  walls.py  walls2.py  walls3.py
android/: stream_sensors.py
app/: build.gradle.kts
app/src/androidTest/java/com/example/indoornavmvp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/indoornavmvp/: AdminActivity.kt  StartActivity.kt  UserArActivity.kt
app/src/main/java/com/example/indoornavmvp/ar/: ArNodeFactory.kt  ArSceneViewComposable.kt
app/src/main/java/com/example/indoornavmvp/data/: LocalNode.kt  MapRepository.kt  NavModels.kt  PathFinder.kt
app/src/main/java/com/example/indoornavmvp/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/indoornavmvp/: ExampleUnitTest.kt
configs/: samsung_s23fe.yaml
gradle/wrapper/: gradle-wrapper.properties
phone_bridge/: CMakeLists.txt  phone_slam.cpp  phone_slam_ipwebcam.cpp  phone_slam_mono.cpp  phone_slam_phyphox.cpp  phone_slam_websocket.cpp
scripts/: calibrate_camera.py  run_phone_slam.sh
vectura-ai/: package-lock.json  package.json
vectura-ai/app/: globals.css  layout.tsx  page.tsx
vectura-ai/app/admin/dashboard/: page.tsx
vectura-ai/app/visitor/init/: page.tsx
vectura-ai/app/visitor/navigate/: page.tsx
vectura-ai/app/visitor/search/: page.tsx
vectura-ai/components/: ARElements.tsx  Footer.tsx  Header.tsx  POICard.tsx  PhoneFrame.tsx  ProgressBar.tsx  QRScanner.tsx  SearchInput.tsx
